Restrict the events that can be attached to the jump event. Add JS to disable the bottom anchor if nothing can be attached. Prevent campaignEventOnLoad from executing when an event modal is opened (wasted cycles)

--- a/app/bundles/CampaignBundle/Assets/css/campaign.css
+++ b/app/bundles/CampaignBundle/Assets/css/campaign.css
@@ -7,6 +7,7 @@
     position: fixed;
     top: 15px;
     right: 30px;
+    z-index: 1040;
 }
 
 .campaign-builder .builder-content {
